// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/modalError should renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      Array [
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "justifyContent": "center",
        },
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 36,
          "justifyContent": "center",
          "marginVertical": 60,
          "paddingHorizontal": 60,
          "paddingVertical": 72,
          "width": 702,
        },
        Object {
          "maxWidth": "80%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(43, 120, 238, 0.15)",
            "borderRadius": 100,
            "padding": 36,
          },
          Object {
            "backgroundColor": "rgba(245, 77, 61, 0.15)",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          Object {
            "color": "#F54D3D",
            "fontFamily": "Neotis",
            "fontSize": 108,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "marginBottom": 24,
          "marginTop": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 54,
              "lineHeight": 66,
            },
            Array [
              Object {
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          Array [
            Object {
              "color": "#5E6678",
              "fontFamily": "Inter-Regular",
              "fontSize": 42,
              "lineHeight": 54,
            },
            Array [
              Object {
                "paddingTop": 24,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        descriptionText
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingTop": 60,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "transparent",
            "borderRadius": 36,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 18,
            "minHeight": 144,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 54,
                "lineHeight": 66,
              },
              Array [
                Object {
                  "color": "#2B78EE",
                  "paddingHorizontal": 18,
                },
                undefined,
              ],
            ]
          }
        >
          Отмена
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#F54D3D",
            "borderRadius": 36,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginLeft": 18,
            "minHeight": 144,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 54,
                "lineHeight": 66,
              },
              Array [
                Object {
                  "color": "#FFF",
                  "paddingHorizontal": 18,
                },
                undefined,
              ],
            ]
          }
        >
          Удалить
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/modalError should renders correctly with optional 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.2)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      },
      Array [
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "justifyContent": "center",
        },
      ],
    ]
  }
  testID="Pressable"
>
  <View
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 36,
          "justifyContent": "center",
          "marginVertical": 60,
          "paddingHorizontal": 60,
          "paddingVertical": 72,
          "width": 702,
        },
        Object {
          "maxWidth": "80%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgba(43, 120, 238, 0.15)",
            "borderRadius": 100,
            "padding": 36,
          },
          Object {
            "backgroundColor": "rgba(245, 77, 61, 0.15)",
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          Object {
            "color": "#F54D3D",
            "fontFamily": "Neotis",
            "fontSize": 108,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "marginBottom": 24,
          "marginTop": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          Array [
            Object {
              "color": "#20242D",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 54,
              "lineHeight": 66,
            },
            Array [
              Object {
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          Array [
            Object {
              "color": "#5E6678",
              "fontFamily": "Inter-Regular",
              "fontSize": 42,
              "lineHeight": 54,
            },
            Array [
              Object {
                "paddingTop": 24,
                "textAlign": "center",
              },
              undefined,
            ],
          ]
        }
      >
        descriptionText
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "paddingTop": 60,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#2B78EE",
            "borderRadius": 36,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginRight": 18,
            "minHeight": 144,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 54,
                "lineHeight": 66,
              },
              Array [
                Object {
                  "color": "#FFF",
                  "paddingHorizontal": 18,
                },
                undefined,
              ],
            ]
          }
        >
          textLeft
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#2B78EE",
            "borderRadius": 36,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginLeft": 18,
            "minHeight": 144,
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 54,
                "lineHeight": 66,
              },
              Array [
                Object {
                  "color": "#FFF",
                  "paddingHorizontal": 18,
                },
                undefined,
              ],
            ]
          }
        >
          textRight
        </Text>
      </View>
    </View>
  </View>
</View>
`;
